--- a/astolfo-dashboard/src/index.css
+++ b/astolfo-dashboard/src/index.css
@@ -2,5 +2,11 @@ body {
   margin: 0;
   background-color: #292929;
   color: #fff;
-  font-family: 'DM Sans' ;
+  font-family: "DM Sans";
+  height: 100%;
+}
+
+html,
+#root {
+  height: 100%;
 }
