--- a/astolfo-angular/src/app/nav/nav.component.scss
+++ b/astolfo-angular/src/app/nav/nav.component.scss
@@ -1,15 +1,31 @@
+.sidenav-container {
+  height: 100%;
+}
+
+.sidenav {
+  width: 200px;
+}
+
+.sidenav .mat-toolbar {
+  background: inherit;
+}
+
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
 mat-toolbar {
   background: #004a9f;
   color: white;
 }
 
 mat-sidenav {
-  margin: 16px;
   width: 200px;
   border-right: none;
   background: #002b5c;
   color: white;
-  border-radius: 10px;
   padding: 16px;
   text-align: center;
 }
