--- a/astolfo-angular/src/app/nav/pages/home/home.component.html
+++ b/astolfo-angular/src/app/nav/pages/home/home.component.html
@@ -1,7 +1,11 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Dashboard</h1>
+  <h1 class="mat-h1">{{guildInfo ? guildInfo.name : 'Dashboard'}}</h1>
   <mat-grid-list [cols]="size" rowHeight="350px">
-    <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
+
+    <mat-grid-tile [colspan]="size">
+
+    </mat-grid-tile>
+    <!-- <mat-grid-tile *ngFor="let card of cards | async" [colspan]="card.cols" [rowspan]="card.rows">
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
@@ -19,6 +23,6 @@
           <div>uwu</div>
         </mat-card-content>
       </mat-card>
-    </mat-grid-tile>
+    </mat-grid-tile> -->
   </mat-grid-list>
 </div>
