--- a/astolfo-angular/src/app/nav/nav.component.html
+++ b/astolfo-angular/src/app/nav/nav.component.html
@@ -10,7 +10,7 @@
       <p class="designation">Software Engineer</p>
 
       <mat-divider></mat-divider>
-      <button mat-button class="menu-button" *ngFor="let route of routes" [routerLink]="route.name">
+      <button mat-button class="menu-button" *ngFor="let route of routes" [routerLink]="route.route">
         <mat-icon>{{route.icon}}</mat-icon>
         <span>{{route.name | titlecase}}</span>
       </button>
