--- a/astolfo-angular/src/app/components/guild-stats/guild-stats.component.html
+++ b/astolfo-angular/src/app/components/guild-stats/guild-stats.component.html
@@ -1,8 +1,18 @@
-<mat-tab-group>
-  <mat-tab label="User" >
-    <app-member-stats [size]="size"></app-member-stats>
-  </mat-tab>
-  <mat-tab label="Guild">
-    <app-guild-stats [size]="size"></app-guild-stats>
-  </mat-tab>
-</mat-tab-group>
+<section>
+  <div class="example-label">
+    <h1>User</h1>
+  </div>
+  <div class="example-button-row">
+  </div>
+</section>
+<mat-divider></mat-divider>
+<app-member-stats [size]="size" [user]='user'></app-member-stats>
+<section>
+  <div class="example-label">
+    <h1>Guild</h1>
+  </div>
+  <div class="example-button-row">
+  </div>
+</section>
+<mat-divider></mat-divider>
+<app-guild-stats [size]="size"></app-guild-stats>
