--- a/astolfo-angular/src/app/components/guild-stats/guild-stats.component.scss
+++ b/astolfo-angular/src/app/components/guild-stats/guild-stats.component.scss
@@ -35,3 +35,37 @@
 table {
   width: 100%;
 }
+
+section {
+  display: table;
+}
+
+.example-label {
+  display: table-cell;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  font-size: 14px;
+  margin-left: 8px;
+  min-width: 120px;
+}
+
+.example-button-row {
+  display: table-cell;
+  width: 100%;
+}
+
+.example-button-row .mat-button-base {
+  margin: 8px 8px 8px 0;
+}
+
+.example-flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 120px;
+}
