[angular] updated format

--- a/astolfo-angular/src/app/components/guild-stats/guild-stats.component.html
+++ b/astolfo-angular/src/app/components/guild-stats/guild-stats.component.html
@@ -2,17 +2,16 @@
   <div class="example-label">
     <h1>User</h1>
   </div>
-  <div class="example-button-row">
-  </div>
+  <div class="example-button-row"></div>
 </section>
 <mat-divider></mat-divider>
-<app-member-stats [size]="size" [user]='user'></app-member-stats>
+<app-member-stats [size]="size" [user]="user"></app-member-stats>
+<br />
 <section>
   <div class="example-label">
     <h1>Guild</h1>
   </div>
-  <div class="example-button-row">
-  </div>
+  <div class="example-button-row"></div>
 </section>
 <mat-divider></mat-divider>
 <app-guild-stats [size]="size"></app-guild-stats>
