--- a/astolfo-angular/src/styles.scss
+++ b/astolfo-angular/src/styles.scss
@@ -1,26 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 @include mat-core();
 
-$light-app-theme: mat-light-theme((
-        color: (
-                primary: mat-palette($mat-indigo),
-                accent: mat-palette($mat-pink, A200, A100, A400),
-                warn: mat-palette($mat-red),
-        )
-));
+$light-app-theme: mat-light-theme(
+  (
+    color: (
+      primary: mat-palette($mat-indigo),
+      accent: mat-palette($mat-pink, A200, A100, A400),
+      warn: mat-palette($mat-red),
+    ),
+  )
+);
 
-$dark-app-theme:   mat-dark-theme((
-        color: (
-                primary: mat-palette($mat-cyan),
-                accent: mat-palette($mat-blue-gray, A200, A100, A400),
-                warn: mat-palette($mat-amber),
-        )
-));
+$dark-app-theme: mat-dark-theme(
+  (
+    color: (
+      primary: mat-palette($mat-cyan),
+      accent: mat-palette($mat-blue-gray, A200, A100, A400),
+      warn: mat-palette($mat-amber),
+    ),
+  )
+);
 
 @include angular-material-theme($light-app-theme);
 
