[angular] Added Chart to Dashboard

--- a/astolfo-angular/src/app/nav/pages/home/home.component.html
+++ b/astolfo-angular/src/app/nav/pages/home/home.component.html
@@ -1,11 +1,14 @@
 <div class="grid-container">
   <!-- <h1 class="mat-h1">{{guildInfo ? guildInfo.name : 'Dashboard'}}</h1> -->
 
-  <!-- <div *ngIf="size">
+  <div *ngIf="size && guildInfo">
     <app-guild-config [size]="size" [guildInfo]="guildInfo!"></app-guild-config>
-  </div> -->
-
-  <app-guild-card-stats [size]="size" [guildId]="guildInfo?.id"></app-guild-card-stats>
+  </div>
+  <br />
+  <app-guild-card-stats
+    [size]="size"
+    [guildId]="guildInfo?.id"
+  ></app-guild-card-stats>
   <!-- <mat-grid-list [cols]="size" rowHeight="350px">
     <mat-grid-tile [colspan]="size" rowspan="1">
     </mat-grid-tile>
