--- a/astolfo-angular/src/app/components/guild-config/guild-config.component.html
+++ b/astolfo-angular/src/app/components/guild-config/guild-config.component.html
@@ -1,25 +1,39 @@
+<section>
+  <div class="example-label">
+    <h1>Config</h1>
+  </div>
+  <div class="example-button-row"></div>
+</section>
+<mat-divider></mat-divider>
+
 <mat-grid-list [cols]="size" rowHeight="150px">
   <mat-grid-tile [colspan]="1" [rowspan]="1">
     <mat-card class="dashboard-card">
-      <mat-card-header>
-      </mat-card-header>
+      <mat-card-header> </mat-card-header>
       <mat-card-content class="dashboard-card-content">
         <div class="flex">
-          <img class="img-border" width="70px" src="{{ guildInfo.icon |  GetGuildIcon:guildInfo.id}}" />
-          <h1>{{guildInfo ? guildInfo.name : 'guild'}}</h1>
+          <img
+            class="img-border"
+            width="70px"
+            src="{{ guildInfo.icon | GetGuildIcon: guildInfo.id }}"
+          />
+          <h1>{{ guildInfo ? guildInfo.name : "guild" }}</h1>
         </div>
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
-
-
 
   <mat-grid-tile [colspan]="1" [rowspan]="1">
     <mat-card class="dashboard-card">
       <mat-card-header>
         <mat-card-title>
           Prefix
-          <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+          <button
+            mat-icon-button
+            class="more-button"
+            [matMenuTriggerFor]="menu"
+            aria-label="Toggle menu"
+          >
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu" xPosition="before">
@@ -31,24 +45,32 @@
       <mat-card-content class="dashboard-card-content">
         <mat-form-field class="example-full-width" appearance="fill">
           <mat-label>Enter your Prefix</mat-label>
-          <input (keypress)="userQuestionUpdate.next($event)" matInput placeholder="Ex. , ! ? $" [value]="prefix ? prefix : ''">
+          <input
+            (keypress)="userQuestionUpdate.next($event)"
+            matInput
+            placeholder="Ex. , ! ? $"
+            [value]="prefix ? prefix : ''"
+          />
         </mat-form-field>
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
-
-
 
   <mat-grid-tile *ngIf="guildChannels" [colspan]="1" [rowspan]="1">
     <mat-card class="dashboard-card">
       <mat-card-header>
         <mat-card-title>
           Welcome Message
-          <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+          <button
+            mat-icon-button
+            class="more-button"
+            [matMenuTriggerFor]="menu"
+            aria-label="Toggle menu"
+          >
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu" xPosition="before">
-            <button mat-menu-item>reset</button>
+            <button mat-menu-item>Reset</button>
             <!-- <button mat-menu-item>Remove</button> -->
           </mat-menu>
         </mat-card-title>
@@ -56,9 +78,15 @@
       <mat-card-content class="dashboard-card-content">
         <mat-form-field appearance="fill">
           <mat-label>Select Channel</mat-label>
-          <mat-select [(value)]="welcomeChannel" (selectionChange)="selectOnchange($event)" >
-            <mat-option *ngFor="let channel of guildChannels" [value]="channel.id" >
-              {{channel.name}}
+          <mat-select
+            [(value)]="welcomeChannel"
+            (selectionChange)="selectOnchange($event)"
+          >
+            <mat-option
+              *ngFor="let channel of guildChannels"
+              [value]="channel.id"
+            >
+              {{ channel.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
