--- a/astolfo-angular/src/app/components/guild-stats/guild-stats/guild-stats.component.html
+++ b/astolfo-angular/src/app/components/guild-stats/guild-stats/guild-stats.component.html
@@ -1,13 +1,15 @@
 <mat-grid-list [cols]="size" rowHeight="150px">
-
-
-
   <mat-grid-tile [colspan]="size" [rowspan]="3">
     <mat-card class="dashboard-card">
       <mat-card-header>
         <mat-card-title>
           Guild
-          <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+          <button
+            mat-icon-button
+            class="more-button"
+            [matMenuTriggerFor]="menu"
+            aria-label="Toggle menu"
+          >
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu" xPosition="before">
@@ -16,11 +18,7 @@
           </mat-menu>
         </mat-card-title>
       </mat-card-header>
-      <mat-card-content class="dashboard-card-content">
-        uwu
-      </mat-card-content>
+      <mat-card-content class="dashboard-card-content"> uwu </mat-card-content>
     </mat-card>
   </mat-grid-tile>
-
-
 </mat-grid-list>
