--- a/astolfo-angular/src/app/components/guild-stats/member-stats/member-stats.component.html
+++ b/astolfo-angular/src/app/components/guild-stats/member-stats/member-stats.component.html
@@ -1,68 +1,47 @@
-<mat-grid-list [cols]="size" rowHeight="175px" style="min-width: 400px;">
-
-  <mat-grid-tile [colspan]="size == 3? 1 : size == 2 ? size : 1" [rowspan]="2">
+<mat-grid-list [cols]="size" rowHeight="185px" [hidden]="user !== []">
+  <mat-grid-tile [colspan]="size == 3 ? 1 : size == 2 ? size : 1" [rowspan]="2">
     <mat-card class="dashboard-card">
-      <!-- <mat-card-header>
-        <mat-card-title>
-          Prefix
-          <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
-            <mat-icon>more_vert</mat-icon>
-          </button>
-          <mat-menu #menu="matMenu" xPosition="before">
-            <button mat-menu-item>Reset</button>
-            <button mat-menu-item>Remove</button>
-          </mat-menu>
-        </mat-card-title>
-      </mat-card-header> -->
-      <mat-card-content class="dashboard-card-content" style="align-items: center; display: flex; justify-content: center; align-items: center ">
-        <!-- <mat-tab-group>
-          <mat-tab label="Chart">
-            <div>
-
-            </div>
-          </mat-tab>
-          <mat-tab label="Table">
-            <div>
-
-            </div>
-          </mat-tab>
-          <mat-tab label="Stats">
-            <div>
-
-            </div>
-          </mat-tab>
-        </mat-tab-group> -->
-        <div style="height: 250px; width: 250px;"  *ngIf="doughnutChartData">
-          <canvas baseChart
-        [data]="doughnutChartData"
-        [type]="doughnutChartType">
-      </canvas>
-          <!-- <canvas height="250px" baseChart [data]="doughnutData" [options]="doughnutOptions" [type]="'doughnut'">
-          </canvas> -->
+      <mat-card-content
+        class="dashboard-card-content"
+        style="
+          align-items: center;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        "
+      >
+        <div style="height: 300px">
+          <canvas
+            baseChart
+            [data]="doughnutChartData"
+            [labels]="doughnutChartLabels"
+            [type]="doughnutChartType"
+          >
+          </canvas>
         </div>
-
       </mat-card-content>
     </mat-card>
   </mat-grid-tile>
 
-  <mat-grid-tile [colspan]="size == 3? 2 : size == 2 ? size : 1" [rowspan]="2">
+  <mat-grid-tile [colspan]="size == 3 ? 2 : size == 2 ? size : 1" [rowspan]="2">
     <mat-card class="dashboard-card">
       <mat-card-header>
         <mat-card-title>
           Prefix
-          <button mat-icon-button class="more-button" [matMenuTriggerFor]="menu" aria-label="Toggle menu">
+          <button
+            mat-icon-button
+            class="more-button"
+            [matMenuTriggerFor]="menu"
+            aria-label="Toggle menu"
+          >
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu" xPosition="before">
             <button mat-menu-item>Reset</button>
-            <!-- <button mat-menu-item>Remove</button> -->
           </mat-menu>
         </mat-card-title>
       </mat-card-header>
-      <mat-card-content class="dashboard-card-content">
-        uwu
-      </mat-card-content>
+      <mat-card-content class="dashboard-card-content"> uwu </mat-card-content>
     </mat-card>
   </mat-grid-tile>
-
 </mat-grid-list>
