--- a/astolfo-angular/src/app/components/guild-config/guild-config.component.html
+++ b/astolfo-angular/src/app/components/guild-config/guild-config.component.html
@@ -49,7 +49,7 @@
             (keypress)="userQuestionUpdate.next($event)"
             matInput
             placeholder="Ex. , ! ? $"
-            [value]="prefix ? prefix : ''"
+            [value]="prefix"
           />
         </mat-form-field>
       </mat-card-content>
